Have info bar clearfix itself to avoid miswraping surrounding elements

--- a/src/main/webapp/app/sass/organisms/_site-account-cta.scss
+++ b/src/main/webapp/app/sass/organisms/_site-account-cta.scss
@@ -1,3 +1,7 @@
+.site-account-cta{
+  @include clearfix;
+}
+
 .site-account-cta__cell {
   color: white;
   height: 75px;
